--- a/SupLogin/Info.plist
+++ b/SupLogin/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Uploading profile pictures require access to photo library</string>
 </dict>
 </plist>
